--- a/docs/alkiln/setup.mdx
+++ b/docs/alkiln/setup.mdx
@@ -63,7 +63,7 @@ Installing tests can involve one or more of these things:
 
 This is the way we recommend setting up ALKiln tests for a repository for the first time. You are least likely to run into setup problems with this method. Every repository that needs to use this kind of test must go through this setup process.
 
-The tests run whenever you commit any code to any branch on GitHub. You can read more [details and the pros and cons of GitHub tests](#github-details)[^types] below.
+The tests run whenever you commit any code to any branch on GitHub. You can read more [details and the pros and cons of GitHub tests](#github-details) below.[^names]
 
 **You need:**
 
