More progress on ALKiln reorganization. Security ready for review. (#403)
* Move alkiln docs to alkiln folder

* Tweak top blurb and quick reminders

* Mock up intro screen

* Improve intro page, move files around, add intro to sidebar

* Add initial setup instructions

* Add more setup details. Should this also describe running tests?

* Add the outline for "writing tests" page

* Push temp WIPs for shorter timeline

* Fix links

* Temporarily finish setup.md, start security and troubleshooting

* Add all current security info.
Also, edited some other stuff

* Complete security page for now.

* Add links to pages from intro, clean up links and comments

* Abstract secure env var treatment into its own file

* Convert all files to mdx and all links to file links

* Add test-writing refreshers, step overview, and files anatomy

* Add Story Table, edit checkbox & typo errors, add colors

* Improve Story Table, remove generator section

* Start values section, security back to WIP, fix footnotes

* Fix link for GitHub build. Note: local build worked, but should not


Co-authored-by: will-morningstar <mxwillmorningstar@gmail.com>

--- a/docs/alkiln/older_versions.mdx
+++ b/docs/alkiln/older_versions.mdx
@@ -2,15 +2,14 @@
 id: alkiln_deprecated
 title: Documentation for older versions of ALKiln
 sidebar_label: WIP Older versions
-slug: /alkiln/older_versions
+slug: /alkiln/old
 ---
 
-
 :::warning
-WIP
+WIP (Work in progress)
 :::
 
-This page has documentation for old versions Steps and such.
+This page has documentation for old versions of Steps and such.
 
 or
 
@@ -32,7 +31,7 @@ default screen parts:
     <div data-variable="${ encode_name(str( user_info().variable )) }" id="trigger" aria-hidden="true" style="display: none;"></div>
 ```
 
-Use that HTML exactly. No customizations.
+Use that HTML exactly. No customization.
 
 If you already have something in your `post:`, just copy the `<div>` and paste it in after the other code. Putting it at the end can avoid messing up other HTML.
 
