--- a/docs/alkiln/intro.mdx
+++ b/docs/alkiln/intro.mdx
@@ -5,9 +5,8 @@ sidebar_label: WIP Intro
 slug: /alkiln/intro
 ---
 
-
 :::warning
-WIP
+WIP (Work in progress)
 :::
 
 <!-- Move to /docs
@@ -34,11 +33,11 @@ Welcome to the ALKiln testing framework! It helps you check that your docassembl
 
 ## Quick start {#quickstart}
 
-Ready to start testing? Need to quickly refresh your memory on some imporant points? Start here.
+Ready to start testing? Need to quickly refresh your memory on some important points? Start here.
 
 <!-- Change "install" to "setup"? -->
-- [Install ALKiln for your package and run tests](setup#recommended-setup)
-- [Write your first test](setup#first-test)
+- [Install ALKiln for your package and run tests](setup.mdx#recommended-setup)
+- [Write your first test](setup.mdx#first-test)
 - [Generate more complicated tests](https://plocket.github.io/alkiln_story/) <!-- (docs#generator) -->
 
 :::warning TODO: add links
@@ -50,15 +49,13 @@ Ready to start testing? Need to quickly refresh your memory on some imporant poi
 
 ALKiln topics you can explore.
 
-:::warning TODO: add links
 <!-- Change "setup" to "install"? -->
-- [Setting up](setup): Learn different ways to install ALKiln for your package or organization <!-- (setup and running tests and first test, maybe advanced pros and cons of setup) -->
-- Writing tests: What you need to know to effecitvely write tests
-- Troubleshooting: Help with common errors and warnings <!-- (errors, maybe in FAQ?) -->
-- Support for Old Versions: Guides for using older out-of-date features
-- Frequently Asked Questions (FAQs): Find answers to common questions
-- Security: Stay safe by using best practices and find out how we protect you too <!-- if you're going to mess with more complex workflows, read this section about GitHub security for workflows -->
-:::
+- [Setting up](setup.mdx): Learn different ways to install ALKiln for your package or organization <!-- (setup and running tests and first test, maybe advanced pros and cons of setup) -->
+- [Writing tests](writing_tests.mdx): What you need to know to effectively write tests
+- [Troubleshooting](troubleshooting.mdx): Help with common errors and warnings <!-- (errors, maybe in FAQ?) -->
+- Support for [older Versions](older_versions.mdx): Guides for using older out-of-date features
+- [Frequently Asked Questions](writing_tests.mdx#faq) (FAQ): Find answers to common questions
+- [Security](security.mdx): Stay safe by using best practices and find out how we protect you too <!-- if you're going to mess with more complex workflows, read this section about GitHub security for workflows -->
 
 
 ## Why automate testing? {#why-test}
@@ -78,7 +75,7 @@ Tests can protect your users from bugs that can:
 - Stop them completely with an error
 - Lose their trust in you
 
-You can write your simple [first test](setup#first-test) <!-- add link --> right away if you want. Wait to write more complex tests till your code is more stable. "More stable" means that the question variables for the section you are testing are staying the same.
+You can write your simple [first test](setup.mdx#first-test) right away if you want. Wait to write more complex tests till your code is more stable. "More stable" means that the question variables for the section you are testing are staying the same.
 
 When you add a new required field or change the variable name or values of a user's field, you will need to update those tests.
 
