--- a/docs/alkiln/writing_tests.mdx
+++ b/docs/alkiln/writing_tests.mdx
@@ -2,98 +2,472 @@
 id: alkiln_writing
 title: Writing ALKiln tests
 sidebar_label: WIP Writing tests
-slug: /alkiln/writing_tests
+slug: /alkiln/writing
 ---
 
-
 :::warning
-WIP
+WIP (Work in progress)
 :::
 
 
-This page describes your tests files and how to write tests. It contains a lot of information. To see the table of contents on a narrow screen, tap on the dropdown menu at the top of the page. To see it on a desktop, see the column on the right-hand side of the screen.
+This page describes your tests files and how to write tests <!-- , run tests, -->  and other useful information. To see the table of contents on a small screen, tap on the dropdown menu at the top of the page. To see it on a wider screen, see the column on the right-hand side of the screen.
 
-## Quick refresher
 
-See a first test here...
+## Do _I_ need to read this? {#who}
 
-Generate a more complex test with [alkiln_story](https://github.com/plocket/alkiln_story)...
+If you are writing tests <!-- , running tests, --> or need to learn about test files, this page is for you.
 
-Example of a complex test:
+
+## Quick refresher {#refresh}
+
+1. You can see [what your first test might look like](setup.mdx#first-test).
+1. You can generate a more complex test with the help of the [ALKiln Story Table Step generator](https://github.com/plocket/alkiln_story).
+1. Every time you change or add a required variable, you must update the tests that need that variable.
+1. You write and edit `.feature` test files in your Sources folder.
+1. You can check the syntax of your test file by using an editor like the [editor at AssertThat](https://www.assertthat.com/online-gherkin-editor).
+1. If you are using GitHub tests, those tests will run when anyone commits to GitHub.
+1. By default, each Step or page **must** be completed in at most 30 seconds. You can change that with the "the maximum seconds" Step listed in the Steps.
+1. ALKiln creates test reports and pictures. For example, ALKiln saves pictures and the HTML of pages that showed errors In GitHub, they are in the zip file in [your workflow's artifact section](https://docs.github.com/en/actions/managing-workflow-runs/downloading-workflow-artifacts).
+1. There are some field types that ALKiln cannot yet handle, including some `object`-type fields.
+
+<!-- The tests use the [gherkin language and syntax](https://cucumber.io/docs/gherkin/reference/) -->
+
+Here is an example of a more complex test for a quick refresher on some of our features:
 
 ```gherkin
-Feature: ...
+@children
+Feature: I have children
 
-Scenario: ...
+@fast @child_benefits
+Scenario: child has benefits
+  Given I start the interview at "some_file_name.yml"
+  And I get to the question id "benefits" with this data:
+    | var | value | trigger |
+    | children.there_are_any | True |
+    | children.target_number | 2 |
+    | children[0].name.first | Cashmere |
+    | children[0].name.last | Davis |
+    | children[1].name.first | Casey |
+    | children[1].name.last | Davis |
+  When I set the var "benefits['SSI']" to "True"
+  And I tap to continue
+  Then the question id should be "download"
+  And I download "some_motion.pdf"
 ```
 
-Other reminders:
 
-- ...
-- ...
-- ...
+## Writing test Steps overview {#steps}
+
+Most of [the code in test files](#files) is code for ALKiln Steps.
+
+ALKiln Steps are how you give your instructions to the ALKiln robot. Steps are made of commands[^meh] that ALKiln has created for you. Those commands often need information from you. They are like fill-in-the-blank sentences. A sort of [madlibs](https://en.wikipedia.org/wiki/Mad_Libs#format) for your ALKiln robot. For example:
+
+```gherkin
+  And I set the variable "likes_bears" to "True"
+```
+
+This Step is made of three parts.
+
+1. `And` is one of the keywords that can start a Step
+1. `I set the variable "___" to "___"` is an ALKiln command with blanks that you need to fill in
+1. `likes_bears` and `True` are the information you put in the blanks so that the ALKiln robot knows what answer to give to a question
+
+That command can also be written as `I set the variable "<variable name>" to "<value>"`. This tells you what information you should put in each of these blanks. In this case there are two blank spaces you should fill. In the first blank, you are supposed to put the name of the variable that the field will set. In the second blank, you are supposed to put the value that you want the variable to have.
+
+Each of your tests - a `Scenario` or a `Scenario Outline` - usually contains many Steps. Any Step can be used as many times as you want and at any point in a test.
 
 
-## Writing test Steps overview
-
-Any Step can be used as many times as you want.
+[^meh]: We are still working finding a more descriptive name. Suggestions are welcome.
 
 
-## Steps to start tests
+## Interactive Steps {#interact}
 
+You can use some Steps to change what is on the page by filling in fields, pressing buttons or tabs, or performing other actions.
+
+
+### The Story Table Step {#story-table}
+
+The Story Table Step fills in fields on interview pages. It is the Step many of our authors work with the most. In our opinion, it is the most flexible way to fill in fields in your forms, unlike the linear ["I set" Step](#set). This makes a test easier to maintain.
+
+You can use the [story table generator](https://plocket.github.io/alkiln_story/) to generate a first draft of a full test file that uses a Story Table based on an interview you have finished.
+
+<!--
+TODO: add an extensive instructions section to the generator. Something like:
+1. If you don't have one already, [add a new test file](#how-do-i-add-a-new-test-file). You can leave out the Scenario.
+1. Ensure your server config is set up to [show debug info](https://docassemble.org/docs/config.html#debug).
+1. Run your interview manually until you reach the page you want the story table to get to.
+1. Open the "source" display of the interview. Currently, that looks like angle brackets, `</>`, in the header of the page.
+1. Note the `id` of the page.
+1. Tap the "Show variables and values" button. It will open a new tab showing a big JSON object.
+1. Copy all the text on that page.
+1. Go to the [story table generator](https://plocket.github.io/alkiln_story/).
+1. Paste the JSON into the text area there, as instructed.
+1. Use the other input fields to help finalize your Scenario, including the page `id`.
+1. Copy the Scenario that has been generated for you.
+1. Paste that into the already prepared test file.
+ -->
+
+The Story Table Step is made of a sentence followed by a table. The data in the table is a snapshot of the user who is filling out the form. Each table row describes one fact about the user - one variable in the interview. It has this format:
+
+```gherkin
+  And I get to the question id "<target question id>" with this data:
+    | var | value |
+    | <variable name> | <value to set> |
+    | <variable name> | <value to set> |
+```
+
+As you can see, there are three types of blanks you need to fill in for this Step: `<target question id>`, `<variable name>`, `<value to set>`. The way to use the names of variables and values to [set the values of fields](#field-values) is the same as the ["I set" Step](#set).
+
+- The starting sentence **must** include the question `id`[^id] of a page in the interview.
+- The table **must** include all the variables and values necessary to get a user from the current page to the page with the given question id.
+- The table **must** have two columns with the headings `var` and `value`.
+
+On each interview page, ALKiln:
+
+1. Checks if the page has the `<target question id>` you gave it at the start
+1. If the page does have the `<target question id>` it stops the Step
+1. Otherwise, it looks at each `<variable name>` in the `var` column to see if it can find that name in any fields
+1. For each `<variable name>` it finds, it tries to answer the field using the matching `<value to set>`
+1. It tries to continue to the next page
+1. If it is unable to continue it logs an error and stops
+1. Otherwise, it repeats the above
+
+An example table:
+
+```gherkin
+  And I get to the question id "brought scissors" with this data:
+    | var | value |
+    | last_haircut_date | today - 730 |
+    | wants_virtual_haircut | True |
+    | user_name | Jared |
+    | intro_screen_accepts_terms | True |
+```
+
+:::tip Docs
+Filling in checkboxes is tricky. Check our [documentation about setting checkbox values](#checkboxes).
+:::
+
+This Step is flexible, which makes the test easier to maintain. The order of the rows is unimportant. That means you can edit the order of your pages or move fields to different pages without worrying about breaking the test.
+
+ALKiln sets a table variable every time it finds that variable on a page, no matter how many times that variable appears.
+
+You can use multiple Story Tables in a test.
+
+Right now, Story Tables are unable to [use environment variables to fill in answers](#env-vars).
+
+:::warning Unused rows
+The Story Table does not care about extra rows that never get used. This can make Story Tables easier to write, but it also means that the tests will technically "pass" even if variables that *should* get set are never filled in.
+
+That can be a sign that a question that the user *should* have seen got skipped or that there is a typo or mistake in the test.
+
+Because of this, the ALKiln report shows a list of unused rows for each table. You can check the report of passing tests to make sure none of the important rows got skipped.
+:::
+
+
+[^id]: You can find the question `id` in your interview YAML in the `question` block of that page. It is a good idea for every `question` block in your interview to have an id.
+
+
+### `I set the variable "<variable name>" to "<value to set>"` {#set}
+
+WIP
+
+
+### Upload {#upload}
+
+WIP
+
+
+### Environment variables {#env-vars}
+
+WIP
+
+
+## Steps to start tests {#start}
+
+There are some Steps that can be, and often are, the first Step in a test. They can still be used multiple times and at any point in the test. Your test **must** start with one of these Steps.
+
+WIP
+
+
+### `I start the interview at "<YAML file name>"` {#start-interview}
+
+Use this Step to start a new session of an interview.
+
+
+### `The maximum time for a Step is <number> seconds` {#custom-timeout}
+
+WIP
+
+
+### `I wait for <number> seconds` {#wait}
+
+WIP
+
+
+## Setting values {#field-values}
+
+There are different ways to fill in fields. One is the [Story Table Step](#story-table) another is the ["I set" Step](#set). Each has different syntax, but they set values the same way.
+
+
+### Text {#text}
+
+Fields such as the default field or those with `input type: text`, as well as `datatype: textarea` accept text for their value.
+
+
+### yesno {#yesno}
+
+WIP
+
+
+### yesnomaybe {#yesnomaybe}
+
+WIP
+
+
+### radio {#radio}
+
+WIP
+
+
+### checkboxes {#checkboxes}
+
+<!-- Maybe this section should go in the "I set the var" section and/or the Story Table section. It might need to be in all three places. This is such a common problem. If we didn't have to account for `False`, I'd say ALKiln should handle the way everyone seems to intuitively set checkboxes -->
+
+Many authors find setting checkboxes confusing and often accidentally use an incorrect variable name or value. When they do that, they can get a ["variable not found" error](troubleshooting.mdx#variable-not-found) or an ALKiln Story Table Step might just skip the field. Reading this section can help.
+
+:::tip Advanced summary
+- The only value a checkbox can have is `True` or `False`.
+- In ALKiln, the variable name of the checkbox is usually the same as its docassemble variable name. For example, `good_fruits['Apples']`.
+- The names of `object_checkboxes` variable names in ALKiln are similar to how docassemble uses them, but they have extra quotes inside the first square brackets. For example: `best_friends['all_friends[0]']`
+:::
+
+An example of a checkbox field:
+
+```yml
+fields:
+  - Out of all your friends, choose your best friends: best_friends
+    datatype: checkboxes
+    choices:
+      - Emmet
+      - Maria
+      - Sam
+```
+
+The variable name of the checkbox for ALKiln is usually the same as its docassemble variable name. For example, `good_fruits['Apples']`. The only value a checkbox can have is `True` or `False`.
+
+<span class="negative">Wrong</span> way to set the value of the check box:
+
+```gherkin
+    And I set the variable "best_friends" to "Emmet"
+```
+
+<span class="positive">**Right**</span> ways:
+
+```gherkin
+    And I set the variable "best_friends['Emmet']" to "True"
+```
+
+or, in a Story Table:
+
+```gherkin
+      | var | value |
+      | best_friends['Emmet'] | True |
+```
+
+One exception is field created with an `object` datatype, like `object_checkboxes`. Their ALKiln names are similar to their docassemble names, but they need extra quotes. For example, look at this field:
+
+```yml
+fields:
+  - Out of all your friends, choose your best friends: best_friends
+    datatype: object_checkboxes
+    choices: all_friends
+```
+
+<span class="negative">Wrong</span> ways to set the value of the checkbox:
+
+```gherkin
+    And I set the variable "best_friends" to "all_friends"
+    And I set the variable "best_friends" to "all_friends[0]"
+    And I set the variable "best_friends[all_friends[0]]" to "True"
+```
+
+<span class="positive">**Right**</span> ways:
+
+```gherkin
+    And I set the variable "best_friends['all_friends[0]']" to "True"
+```
+
+or, in a Story Table:
+
+```gherkin
+      | var | value |
+      | best_friends['all_friends[0]'] | True |
+```
+
+:::warning Eagle eye
+Especially notice the quotes just inside the first square brackets.
+:::
+
+
+### others {#other-values}
+
+WIP
+
+
+### Special values {#special-values}
+
+`today` is a special value in ALKiln. ALKiln will change that value into the date of the current day. Right now it uses the US format for the date. You can also add or subtract days from `today` to set a specific date in the past or in the future. These are the ways you can use `today`:
+
+```gherkin
+    | signature_date | today |
+    | court_date | today + 20 |
+    | minors_birth_date | today - 3650 |
+```
+
+
+## Observational Steps {#observe}
+
+You can use some Steps to look at what is on the page or compare data. You can use these to make sure the interview has done what you want it to.
+
+
+### `I SHOULD see the phrase "<page text>"` {#phrase}
+
+WIP
+
+
+## Understanding test results {#output}
+
+WIP
+
+
+## Test file anatomy {#files}
+
+Your tests files have the code that tells ALKiln how to answer questions in your interview and do other things. The code may look different than other code you have seen, but it is still code. It is still rigid and needs you to use the right syntax and spelling.
+
+You should save your test files in your package's ["Sources" folder](https://docassemble.org/docs/playground.html#sources). If you used the ALKiln setup interview, there will already be a test there that just loads the interview.
+
+In test files, you use [Gherkin](https://cucumber.io/docs/gherkin/) syntax and keywords[^keywords] with [specific "Steps" that the ALKiln framework has created](#steps) for docassemble interviews.
+
+[^keywords]: Keywords are specific words that have a special meaning and purpose when you use them in specific places in your test code. They are similar to the words `else` and `not` in python.
+
+Here are some rules about test files:
+
+- You can have as many test files as you want.
+- Each file can have one or more tests, called Scenarios or Scenario Outlines.
+- Each file's name **must** end in `.feature` because that is the extension of that type of file. For example, `user_has_children.feature`.
+- Each file **must** start with the keyword `Feature:` or a tag followed by a new line and the `Feature:` keyword.
+- Each file **must** contain only one `Feature:` keyword.
+- You **must** use **Gherkin** syntax for your tests. [Gherkin's own documentation](https://cucumber.io/docs/gherkin/reference/) is the best place to read about Gherkin syntax with some exceptions that you can read below. Ignore notes about "step definitions". Those are part of what ALKiln takes care of.
+
+To troubleshoot Gherkin synatx problems <!-- TODO: Add link to errors that indicate incorrect syntax. Wrong cell count, etc. --> in your tests, use an editor like the one at [AssertThat](https://www.assertthat.com/online-gherkin-editor). It will mark lines that have incorrect syntax. For example, the editor should mark an extra `Feature:` keyword as incorrect.
+
+ALKiln only allows you to use some Gherkin keywords. Those are:
+
+- [`Feature:`](https://cucumber.io/docs/gherkin/reference/#feature) - each file can only use one `Feature:` keyword.
+- [`Scenario:`/`Example:`](https://cucumber.io/docs/gherkin/reference/#example) - We recommend you use `Scenario`. **Make the `Scenario` descriptions unique** because ALKiln will use them in the names of the reports it creates for you. This keyword is different from the plural `Examples`/`Scenarios`.
+- [`Scenario Outline:`](https://cucumber.io/docs/gherkin/reference/#scenario-outline)
+- [`Examples:/Scenarios:`](https://cucumber.io/docs/gherkin/reference/#examples) - We recommend you use `Examples`. This can help you test translations, as shown below. When a `Scenario Outline` has an `Examples` table, the test will run at least once for each row in the table. This keyword is different from the singular `Scenario`/`Example`.
+- Theses keywords that can start a Step - [`Given`](https://cucumber.io/docs/gherkin/reference/#given), [`When`](https://cucumber.io/docs/gherkin/reference/#when), [`Then`](https://cucumber.io/docs/gherkin/reference/#then), and [`And`](https://cucumber.io/docs/gherkin/reference/#and).
+
+ALKiln also lets you use:
+
+- `@` ([Tags](https://cucumber.io/docs/cucumber/api/?lang=java#tags)). The specific sections of the tags documentation that apply to ALKiln are:
+  - A [general description of tags](https://cucumber.io/docs/cucumber/api/?lang=java#tags).
+  - [Tag expressions](https://cucumber.io/docs/cucumber/api/?lang=java#tag-expressions)
+  - Extra: [Tag inheritance](https://cucumber.io/docs/cucumber/api/?lang=java#tag-inheritance).
+- `#` (Comments). They are a tiny bit different than python comments. They always have to be on their own line. The line can begin with zero or more spaces. You can use comments anywhere in your test file.
+- `|` ([Data tables](https://cucumber.io/docs/gherkin/reference/#data-tables)).
+- `"""` ([Doc strings](https://cucumber.io/docs/gherkin/reference/#doc-strings)).
+
+We usually write test text as if it is from the perspective of the user. For example, "I wait" and "I start".
+
+Here is an example of a file that uses most of these features. The name of this file is `children.feature`.
+
+``` gherkin
+@has_children
+Feature: I have children
+
+# This Scenario uses the Story Table Step. It lets you list the names of
+# the variables in any order you want.
+@disallow_visitation
+Scenario: I disallow visitation
+  Given I go to the interview at "protective_order.yml"
+  And I get to the question id "what kind of visitation?" with this data:
+    | var | value |
+    | needs_allow_visitation | False |
+    | user_name | Jordan |
+    | user_has_children | True |
+  Then I should see the phrase "Jordan"
+
+# This test will run once for each row in the `Examples` table. The text
+# between the "<" and ">" is the name of a column in the `Examples` table.
+@allow_visitation
+Scenario Outline: I allow visitation
+  Given I go to the interview at "<url>"
+  Then I should see the phrase "<name>"
+  When I set "user_name" to "Rea"
+  And I tap to continue
+  Then I should see the phrase "<greeting> Rea!"
+  And I set "user_has_children" to "True"
+  And I tap to continue
+  When I set "needs_allow_visitation" to "True"
+  Then I should see see the phrase "This form can help you with that"
+
+  Examples:
+    | url | name | greeting |
+    | protective_order.yml | Your name | Hello |
+    | protective_order.yml&lang=es | Tu nombre | Holá |
+```
+
+
+<!--
+Does this section need more details?
+
+Each file has
 ...
+1. One or more `Scenario` or `Scenario Outline` keywords followed by a colon (`:`) and a space and then a short text description of the purpose of that specific test.
+
+Feature
+Each `Feature` keyword **must** be followed by a colon (`:`) and a space and then a short text description of the purpose of the tests in the file. For example, `Feature: The user has children`.
+Each `Feature` can have zero or more **tags** on the line above it.
+
+Scenario
+Each `Scenario` **must** have one or more **Steps**.
+Each `Scenario` can have zero or more **tags** on the line above it.
+
+Scenario Outline
+1. Can have zero or more `Examples` tables. (Can it really have multiple `Examples`? If so, we should warn that this will cause tons of tests because the number of tests is factorial or something like that.)
+
+Each **Step** **must** start with one of these keywords:
+1. `Given`
+1. `Then`
+1. `When`
+1. `And`
+You can use any of those. It does not matter what you pick.
+ -->
 
 
-### I go to interview at
+## Running tests {#run}
 
-...
+<!--
+### Only run some tests.
+  Only run one test with tags. Here or in setup in the future section about running tests?
+-->
 
-
-### The maximum time for a Step is
-
-...
-
-
-### I wait for
-
-...
+WIP
 
 
-## The Story Table Step
+## Tips {#tips}
 
-...
+<!-- Something about unused rows? -->
 
-
-## Interactive Steps
-
-### Upload
-
-...
-
-
-## Observational Steps
-
-...
-
-
-## Understanding test results
-
-
-
-
-## Test file anatomy
-
-Gherkin instructions...
+WIP
 
 
 
-
-## Tips
-
+## Frequently asked questions (FAQ) {#faq}
 
 
+### Do I have to set every variable in the interview? {#every-var}
 
-## Frequently asked questions (FAQ)
-
-
-
+No, only required variables.
