--- a/docs/alkiln/intro.mdx
+++ b/docs/alkiln/intro.mdx
@@ -91,7 +91,7 @@ To hear more about why and when to test, watch the first part of this Docacon 20
 
 ## What libraries does ALKiln use? {#dependencies}
 
-ALKiln uses [cucumberjs](https://cucumber.io/), [puppeteerjs](https://pptr.dev/, [cheerio](https://cheerio.js.org/), and runs the assertions using the [mocha](https://mochajs.org/) and [chai](https://www.chaijs.com/) libraries.
+ALKiln uses [cucumberjs](https://cucumber.io/), [puppeteerjs](https://pptr.dev/), [cheerio](https://cheerio.js.org/), and runs the assertions using the [mocha](https://mochajs.org/) and [chai](https://www.chaijs.com/) libraries.
 
 Even though this is built using cucumberjs, this framework has a different, less lofty, purpose. cucumberjs focuses on BDD (behavior driven development). This framework mostly deals with regression testing and other conveniences.
 
@@ -101,11 +101,10 @@ Even though this is built using cucumberjs, this framework has a different, less
 - [ALKiln's repository](https://github.com/SuffolkLITLab/ALKiln) contains our core code
 - [GitHub setup interview](https://github.com/SuffolkLITLab/docassemble-ALKilnSetup) helps you install GitHub tests on your repository
 - [ALKilnInThePlayground](https://github.com/SuffolkLITLab/docassemble-ALKilnInThePlayground) lets you run tests from your docassemble server
-
 - [The Story Table test generator](https://github.com/plocket/alkiln_story) uses an interview's JSON variables to create a file containing a Story Table test
 
 :::warning TODO: add links
-- ALKiln's documentation
+- ALKiln's documentation repo
 :::
 
 
