--- a/docs/alkiln/setup.mdx
+++ b/docs/alkiln/setup.mdx
@@ -80,6 +80,8 @@ The tests run whenever you commit any code to any branch on GitHub. You can read
 - GitHub pull requests (PRs)<!-- **If you use the setup interview, it could help to know about:** -->
 - GitHub personal authorization tokens (PATs)
 
+**What to do:**
+
 <GitHubSetup/>
 
 1. Add GitHub secrets to your repository (or organization[^org])
@@ -87,7 +89,7 @@ The tests run whenever you commit any code to any branch on GitHub. You can read
 1. Add new code to that branch, including a new "workflow" file at the very least
 1. Make a pull request with that branch
 
-To run tests:
+**To run tests:**
 
 1. Pull the new code to your Playground
 1. Make a change in one of your files
@@ -153,6 +155,8 @@ Add a link to adding a test to a project
 - Installing GitHub packages on your docassemble server
 - Adding interviews to your docassemble server's configuration's dispatch list
 
+**What to do:**
+
 1. Make sure you are logged into your docassemble server.
 1. Go to your server's ["Package Management" page](https://docassemble.org/docs/packages.html#installing).
 1. [Use GitHub to install](https://docassemble.org/docs/packages.html#github_install) the [ALKilnInThePlayground package](https://github.com/SuffolkLITLab/docassemble-ALKilnInThePlayground) from its `main` branch.
@@ -173,7 +177,7 @@ Add images of picking new version
 Add section in reminders about updating docassemble server (InPlayground) to new version of ALKiln
 :::
 
-To run the tests:
+**To run the tests:**
 
 1. Make sure you are logged into your docassemble server.
 1. Run the ALKiln interview from your server's list of available interviews.
@@ -212,6 +216,8 @@ The tests run whenever you commit any code to any branch on GitHub. You can read
 - GitHub workflows
 - GitHub pull requests (PRs)
 
+**What to do:**
+
 1. Sign in to the package's GitHub repository.
 1. Make a new branch. The name doesn't matter. We often call it `alkiln_tests`.
 1. Tap the choice to add a new file to the repository. You can do this on GitHub or on your own computer.
@@ -242,7 +248,7 @@ First follow the regular instructions to set up for GitHub. The difference here 
 
 Then edit the new workflow to look like  -->
 
-To run tests:
+**To run tests:**
 
 1. Pull the repository's new code to your Playground
 1. Make a change in one of your files
