--- a/docs/alkiln/writing_tests.mdx
+++ b/docs/alkiln/writing_tests.mdx
@@ -22,6 +22,7 @@ If you are writing tests <!-- , running tests, --> or need to learn about test f
 
 1. You can see [what your first test might look like](setup.mdx#first-test).
 1. You can generate a more complex test with the help of the [ALKiln Story Table Step generator](https://github.com/plocket/alkiln_story).
+1. If your interview is using generic objects or index variables, you **must** include special HTML <!-- TODO: Add link to setting special variables. Why is it that `trigger` is still needed? There is a reason, but I don't remember what it is --> in your interview.
 1. Every time you change or add a required variable, you must update the tests that need that variable.
 1. You write and edit `.feature` test files in your Sources folder.
 1. You can check the syntax of your test file by using an editor like the [editor at AssertThat](https://www.assertthat.com/online-gherkin-editor).
@@ -42,7 +43,7 @@ Feature: I have children
 Scenario: child has benefits
   Given I start the interview at "some_file_name.yml"
   And I get to the question id "benefits" with this data:
-    | var | value | trigger |
+    | var | value |
     | children.there_are_any | True |
     | children.target_number | 2 |
     | children[0].name.first | Cashmere |
@@ -87,7 +88,7 @@ You can use some Steps to change what is on the page by filling in fields, press
 
 ### The Story Table Step {#story-table}
 
-The Story Table Step fills in fields on interview pages. It is the Step many of our authors work with the most. In our opinion, it is the most flexible way to fill in fields in your forms, unlike the linear ["I set" Step](#set). This makes a test easier to maintain.
+Use the "Story Table" Step to fill in multiple fields on multiple pages. It is the Step many of our authors work with the most. In our opinion, it is the most flexible way to fill in fields in your forms, unlike the linear ["I set" Step](#set). This makes a test easier to maintain.
 
 You can use the [story table generator](https://plocket.github.io/alkiln_story/) to generate a first draft of a full test file that uses a Story Table based on an interview you have finished.
 
@@ -116,7 +117,7 @@ The Story Table Step is made of a sentence followed by a table. The data in the 
     | <variable name> | <value to set> |
 ```
 
-As you can see, there are three types of blanks you need to fill in for this Step: `<target question id>`, `<variable name>`, `<value to set>`. The way to use the names of variables and values to [set the values of fields](#field-values) is the same as the ["I set" Step](#set).
+As you can see, there are three types of blanks you need to fill in for this Step: `<target question id>`, `<variable name>`, `<value to set>`. The way to use the names of variables and values to [set the values of fields](#values) is the same as the ["I set" Step](#set).
 
 - The starting sentence **must** include the question `id`[^id] of a page in the interview.
 - The table **must** include all the variables and values necessary to get a user from the current page to the page with the given question id.
@@ -169,7 +170,44 @@ Because of this, the ALKiln report shows a list of unused rows for each table. Y
 
 ### `I set the variable "<variable name>" to "<value to set>"` {#set}
 
-WIP
+Use the "I set" Step to fill in one answer on one page. This [sets the value](#values) of that field's variable.
+
+The first set of quotes contain the name of the variable you need to set. The second set of quotes contain the value you want to set. This is the same as the [Story Table's](#story-tables)'s `var` column and `value` column.
+
+This Step is "linear". That is, unlike Story Table rows, these "linear" variable-setting Steps have to be in the correct order and you **must** make sure your test has reached the exact page that has the field. Otherwise your test will fail.
+
+Example fields:
+
+```yml
+code: |
+  users[0].favorite_bear.name.first
+  users[0].favorite_bear.type
+---
+question: Name of your favorite bear
+field:
+  - Bear name: users[i].favorite_bear.name.first
+  - Why is this one your favorite?: users[i].favorite_bear.why
+    input type: area
+---
+question: Favorite bear type
+field:
+  - Pick one: users[i].favorite_bear.type
+    datatype: radio
+    choices:
+      - Black bear: wild_bear
+      - Brown bear: also_wild_bear
+      - Teddy bear: cuddly_bear
+      - Jaime: maybe_not_a_bear
+```
+
+Example linear "I set" Step:
+
+```gherkin
+  And I set the variable "users[0].favorite_bear.name.first" to "Ultraman"
+  And I set the variable "users[0].favorite_bear.why" to "Why not?"
+  And I tap to continue
+  And I set the variable "users[0].favorite_bear.type" to "cuddly_bear"
+```
 
 
 ### Upload {#upload}
@@ -204,14 +242,104 @@ WIP
 WIP
 
 
-## Setting values {#field-values}
+## Setting values {#values}
 
 There are different ways to fill in fields. One is the [Story Table Step](#story-table) another is the ["I set" Step](#set). Each has different syntax, but they set values the same way.
+
+Be sure to use the actual `value` of the field, not just the text that the user sees. For example, for this YAML code the `value` would be "cuddly_bear", not "Teddy bear". "Teddy bear" is just the label.
+
+```yml
+question: Favorite bear type
+field:
+  - Pick one: users[i].favorite_bear.type
+    datatype: radio
+    choices:
+      - Black bear: wild_bear
+      - Brown bear: also_wild_bear
+      - Teddy bear: cuddly_bear
+      - Jaime: maybe_not_a_bear
+```
 
 
 ### Text {#text}
 
-Fields such as the default field or those with `input type: text`, as well as `datatype: textarea` accept text for their value.
+These are fields that a user needs to type in. The [default field type](https://docassemble.org/docs/fields.html#plaintext) is a text field. Other text fields include those with:
+
+- `datatype: date`
+- `datatype: time`
+- `datatype: currency`
+- `datatype: password`
+- `datatype: email`
+- `datatype: phone`
+- `datatype: text`
+- `datatype: integer`
+- `datatype: number`
+- `input type: area` accept text for their value.
+
+You can see more [about `datatype`s and `input type`s in the docassemble docs](https://docassemble.org/docs/fields.html#data%20types).
+
+Example text fields:
+
+```yml
+question: Name of your favorite bear
+field:
+  - Bear name: users[i].favorite_bear.name.first
+  - Why is this one your favorite?: users[i].favorite_bear.why
+    input type: area
+```
+
+Example linear Steps:
+
+```gherkin
+  And I set the variable "users[0].favorite_bear.name.first" to "Ultraman"
+  And I set the variable "users[0].favorite_bear.why" to "Why not?"
+```
+
+Example Story Table Step:
+
+```gherkin
+    | var | value |
+    | users[0].favorite_bear.name.first | Ultraman |
+    | users[0].favorite_bear.why | Why not? |
+```
+
+
+### Dates {#dates}
+
+Dates are a specific kind of text value. ALKiln expects the format ##/##/####. For example, 06/26/2015. For [Assembly Line custom three-parts date fields](../framework/altoolbox#birthdate-and-threepartsdate-custom-data-types), ALKiln will assume the date format is dd/mm/yyyy.
+
+There is also [a special ALKiln value named `today`](#today).
+
+
+### Today {#today}
+
+One special ALKiln value you can include is `today`. That will insert the date on which the test is being run. You can also subtract from, or add days to, `today`.
+
+Example linear Steps:
+
+```gherkin
+  And I set the value "signature_date" to "today"
+  And I set the value "court_date" to "today + 20"
+  And I set the value "minors_birth_date" to "today - 3650"
+```
+
+Example Story Table Step:
+
+```gherkin
+    | signature_date | today |
+    | court_date | today + 20 |
+    | minors_birth_date | today - 3650 |
+```
+
+The last example makes sure that the date is 10 years in the past, ensuring that a minor always stays a minor for that test.
+
+:::warning Be careful
+Be careful with `today` math. If you are testing a "boundary" date, you want to pick a date that is well within a boundary to make the test more robust. For example, if you want to test a date that was 10 or fewer days ago, use `today - 9` instead of `today - 10`.
+
+At some point your tests might run over night and hit midnight right in the middle of the test - after ALKlin fills in the answer, but before the interview finishes. In that situation, if ALKiln answered the question with `today - 10` the clock would tip into the next day by the end of the interview - 11 days from the filled-in date. Your test would fail incorrectly.
+
+The fact is, your users also might have that exact experience, so keep that in mind as you design your interview. For example, instead of just telling a user that they are or are not eligible, you can tell them the date of the deadline so they too will know about the boundary.
+:::
 
 
 ### yesno {#yesno}
@@ -226,7 +354,32 @@ WIP
 
 ### radio {#radio}
 
-WIP
+Example radio button field:
+
+```yml
+question: Favorite bear type
+field:
+  - Pick one: users[i].favorite_bear.type
+    datatype: radio
+    choices:
+      - Black bear: wild_bear
+      - Brown bear: also_wild_bear
+      - Teddy bear: cuddly_bear
+      - Jaime: maybe_not_a_bear
+```
+
+Example linear Step:
+
+```gherkin
+  When I set the variable "users[0].favorite_bear.type" to "cuddly_bear"
+```
+
+Example Story Table Step:
+
+```gherkin
+    | var | value |
+    | users[0].favorite_bear.type | cuddly_bear |
+```
 
 
 ### checkboxes {#checkboxes}
@@ -258,13 +411,13 @@ The variable name of the checkbox for ALKiln is usually the same as its docassem
 <span class="negative">Wrong</span> way to set the value of the check box:
 
 ```gherkin
-    And I set the variable "best_friends" to "Emmet"
+  And I set the variable "best_friends" to "Emmet"
 ```
 
 <span class="positive">**Right**</span> ways:
 
 ```gherkin
-    And I set the variable "best_friends['Emmet']" to "True"
+  And I set the variable "best_friends['Emmet']" to "True"
 ```
 
 or, in a Story Table:
@@ -286,22 +439,22 @@ fields:
 <span class="negative">Wrong</span> ways to set the value of the checkbox:
 
 ```gherkin
-    And I set the variable "best_friends" to "all_friends"
-    And I set the variable "best_friends" to "all_friends[0]"
-    And I set the variable "best_friends[all_friends[0]]" to "True"
+  And I set the variable "best_friends" to "all_friends"
+  And I set the variable "best_friends" to "all_friends[0]"
+  And I set the variable "best_friends[all_friends[0]]" to "True"
 ```
 
 <span class="positive">**Right**</span> ways:
 
 ```gherkin
-    And I set the variable "best_friends['all_friends[0]']" to "True"
+  And I set the variable "best_friends['all_friends[0]']" to "True"
 ```
 
 or, in a Story Table:
 
 ```gherkin
-      | var | value |
-      | best_friends['all_friends[0]'] | True |
+    | var | value |
+    | best_friends['all_friends[0]'] | True |
 ```
 
 :::warning Eagle eye
@@ -323,6 +476,8 @@ WIP
     | court_date | today + 20 |
     | minors_birth_date | today - 3650 |
 ```
+
+The last example makes sure that the date is 10 years in the past, ensuring that a minor always stays a minor for that test.
 
 
 ## Observational Steps {#observe}
